# zephyr_add_rust_library

./: CMakeLists.txt  README.md  TODO.md  zephyr_add_rust_library.cmake
rust_lib_1/: Cargo.toml
rust_lib_1/include/rust_lib_1/: rust_lib_1.h
rust_lib_1/src/: lib.rs
rust_lib_2/: Cargo.toml
rust_lib_2/include/rust_lib_2/: rust_lib_2.h
rust_lib_2/src/: lib.rs
src/: main.c
